--- a/app/src/main/res/layout/activity_packages.xml
+++ b/app/src/main/res/layout/activity_packages.xml
@@ -205,7 +205,7 @@
                     tools:ignore="UselessLeaf">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_singIn"
+                        android:id="@+id/btn_registration"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
