--- a/app/src/main/res/layout/activity_age.xml
+++ b/app/src/main/res/layout/activity_age.xml
@@ -147,6 +147,7 @@
                 tools:ignore="NotSibling,UselessParent">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_age"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
