--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_blue"
-    tools:context=".BookingDetail">
+    tools:context=".booking.BookingDetail">
 
     <RelativeLayout
         android:layout_width="match_parent"
