--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_blue"
-    tools:context=".Diet">
+    tools:context=".diet.Diet">
 
     <RelativeLayout
         android:layout_width="match_parent"
