--- a/app/src/main/res/layout/activity_height.xml
+++ b/app/src/main/res/layout/activity_height.xml
@@ -148,6 +148,7 @@
                 tools:ignore="NotSibling,UselessParent">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_height"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
