--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -146,6 +146,7 @@
                 tools:ignore="NotSibling,UselessParent">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_activitylevel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
