--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -154,7 +154,7 @@
                     android:layout_below="@+id/Ready"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="30dp">
+                   >
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -174,6 +174,7 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:paddingStart="15dp"
+                            android:layout_marginVertical="8dp"
                             android:inputType="textEmailAddress"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size"
@@ -200,8 +201,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
-                            android:paddingStart="15dp"
                             android:inputType="textPassword"
+                            android:paddingStart="15dp"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size"
                             android:textStyle="bold"
@@ -209,7 +210,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/id_forgot_pass"
+                        android:id="@+id/txt_forgot_pass"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
@@ -224,13 +225,13 @@
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_singIn"
+                    android:id="@+id/btn_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="25dp"
                     android:layout_below="@+id/ll_layout"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="23dp"
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn_bg"
@@ -252,7 +253,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/btn_singIn">
+                    android:layout_below="@+id/btn_login">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -272,6 +273,7 @@
                         tools:ignore="HardcodedText"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/create_account"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/Create_now"
