--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back_ground"
-    tools:context=".MainActivity">
+    tools:context=".home.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         tools:ignore="MissingConstraints,UselessLeaf">
 
         <FrameLayout
-            android:id="@+id/container"
+            android:id="@+id/frag_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
@@ -37,7 +37,7 @@
             tools:ignore="UselessParent">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
+                android:id="@+id/bottom_nav_bar"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:layout_alignParentStart="true"
