--- a/app/src/main/res/layout/activity_membership.xml
+++ b/app/src/main/res/layout/activity_membership.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_blue"
-    tools:context=".Membership">
+    tools:context=".membership.Membership">
 
     <RelativeLayout
         android:layout_width="match_parent"
