--- a/app/src/main/res/layout/activity_profile_user_name.xml
+++ b/app/src/main/res/layout/activity_profile_user_name.xml
@@ -129,14 +129,14 @@
                     android:layout_below="@+id/text_photo"
                     tools:ignore="UselessParent">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/circleImageView"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/people_img"
-                    tools:ignore="ExtraText,UselessParent,ImageContrastCheck" />
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/circleImageView"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/people_img"
+                        tools:ignore="ExtraText,UselessParent,ImageContrastCheck" />
 
                 <RelativeLayout
                     android:layout_width="50dp"
@@ -295,6 +295,7 @@
                 android:layout_below="@+id/rl_photo">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
