--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -158,6 +158,7 @@
                 tools:ignore="NotSibling,UselessParent">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
