--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/back_ground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentAccount">
+    tools:context=".home.FragmentAccount">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                     android:layout_marginVertical="20dp">
 
                     <RelativeLayout
-                        android:id="@+id/rl_member_name"
+                        android:id="@+id/rl_profile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -149,14 +149,14 @@
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:id="@+id/rl_my_bookings"
+                        android:id="@+id/rl_bookings"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="20dp"
-                        android:layout_below="@+id/rl_member_name">
+                        android:layout_below="@+id/rl_profile">
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -171,7 +171,9 @@
                                 tools:ignore="ContentDescription" />
 
                         </RelativeLayout>
+
                         <RelativeLayout
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <androidx.appcompat.widget.AppCompatTextView
@@ -211,14 +213,14 @@
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:id="@+id/rl_my_membership"
+                        android:id="@+id/rl_membership"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="20dp"
-                        android:layout_below="@+id/rl_my_bookings">
+                        android:layout_below="@+id/rl_bookings">
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -280,7 +282,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="20dp"
-                        android:layout_below="@+id/rl_my_membership">
+                        android:layout_below="@+id/rl_membership">
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
