--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/back_ground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentWorkout">
+    tools:context=".home.FragmentWorkout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
