--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -59,32 +59,39 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/linearLayout"
+            android:background="@color/card_view"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_below="@+id/linearLayout"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:background="@color/card_view">
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            tools:ignore="ObsoleteLayoutParam">
 
             <RelativeLayout
+                android:id="@+id/rl_Appointment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
                 tools:ignore="UselessParent">
 
             <RelativeLayout
                 android:id="@+id/trainer_review"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -200,20 +207,36 @@
                     android:id="@id/rl_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="30dp"
                     android:layout_below="@+id/trainer_review"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     tools:ignore="UselessParent">
 
+                    <RelativeLayout
+                        android:id="@+id/rl_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Select Date"
+                            android:paddingStart="20dp"
+                            android:textSize="16dp"
+                            android:fontFamily="@font/opensans_semicondensed_semibold"
+                            tools:ignore="HardcodedText,RtlSymmetry,SpUsage" />
+                    </RelativeLayout>
+
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/active_card2"
+                        android:id="@+id/cv_calender"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
                         android:backgroundTint="@color/card_view"
                         app:cardCornerRadius="10dp"
-                        app:cardElevation="8dp"
+                        app:cardElevation="5dp"
+                        android:layout_below="@+id/rl_date"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         tools:ignore="MissingConstraints"
@@ -250,29 +273,90 @@
                                     tools:ignore="UnusedAttribute" />
 
                             </RelativeLayout>
-
-                            <ImageView
-                                android:id="@+id/line"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/rl_calender"
-                                android:src="@drawable/ic_line"
-                                tools:ignore="ContentDescription" />
-
-
-
                         </RelativeLayout>
 
                     </androidx.cardview.widget.CardView>
+
+
+                            <RelativeLayout
+                                android:id="@+id/text_time"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
+                                android:layout_below="@+id/cv_calender">
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Time"
+                                    android:paddingStart="20sp"
+                                    android:fontFamily="@font/opensans_semicondensed_semibold"
+                                    android:textSize="16sp"
+                                    tools:ignore="HardcodedText,RtlSymmetry" />
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/text_time">
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/cv_time"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="50dp"
+                                    android:backgroundTint="@color/card_view"
+                                    app:cardCornerRadius="10dp"
+                                    app:cardElevation="5dp"
+
+                                    android:layout_alignParentStart="true"
+                                    android:layout_alignParentEnd="true"
+                                    tools:ignore="MissingConstraints"
+                                    android:layout_marginVertical="10dp"
+                                    android:layout_marginHorizontal="10dp">
+
+
+                                    <RelativeLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:paddingVertical="5dp"
+                                        android:orientation="horizontal"
+                                        android:layout_alignParentStart="true"
+                                        android:layout_alignParentEnd="true"
+                                        android:layout_alignParentTop="true">
+
+                                    <RelativeLayout
+                                        android:id="@+id/rl_time"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
+                                        android:layout_alignParentEnd="true"
+                                        android:layout_alignParentTop="true">
+                                        <TimePicker
+                                           android:id="@+id/timePicker"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                            android:background="@color/card_view"
+                                            android:textColor="@color/dark_cyan"/>
+
+                                    </RelativeLayout>
+                                    </RelativeLayout>
+
+                                </androidx.cardview.widget.CardView>
+
+                            </RelativeLayout>
+
+                        </RelativeLayout>
 
                 </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
-                    android:layout_below="@+id/rl_layout"
+                    android:layout_below="@+id/rl_Appointment"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
                     tools:ignore="NotSibling,UselessParent">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -280,6 +364,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:layout_marginEnd="25dp"
+                        android:layout_marginVertical="30dp"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentStart="true"
@@ -292,7 +377,6 @@
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
                         android:textStyle="bold"
-                        android:drawableRight="@drawable/ic_chevron_right"
                         tools:ignore="HardcodedText,RtlHardcoded" />
 
                 </RelativeLayout>
@@ -301,7 +385,9 @@
 
             </RelativeLayout>
 
-        </RelativeLayout>
+
+
+        </ScrollView>
 
     </RelativeLayout>
 
