--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -219,6 +219,70 @@
                                     android:src="@drawable/ic_line"
                                     tools:ignore="ContentDescription" />
 
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginTop="20dp"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text="@string/Booking_start_time"
+                                    android:textColor="@color/text"
+                                    android:textSize="16sp"
+                                    tools:ignore="HardcodedText,SpUsage" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="15dp"
+                                    android:fontFamily="@font/nunito_regular"
+                                    android:padding="10dp"
+                                    android:paddingStart="15dp"
+                                    android:text="8.00 am"
+                                    android:textColor="@color/black"
+                                    android:textSize="18sp"
+                                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck" />
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/ic_line"
+                                    tools:ignore="ContentDescription" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginTop="20dp"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text="@string/Booking_end_time"
+                                    android:textColor="@color/text"
+                                    android:textSize="16sp"
+                                    tools:ignore="HardcodedText,SpUsage" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="15dp"
+                                    android:fontFamily="@font/nunito_regular"
+                                    android:padding="10dp"
+                                    android:paddingStart="15dp"
+                                    android:text="10.00 am"
+                                    android:textColor="@color/black"
+                                    android:textSize="18sp"
+                                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck" />
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/ic_line"
+                                    tools:ignore="ContentDescription" />
+
 
                                 <androidx.appcompat.widget.AppCompatTextView
                                     android:layout_width="wrap_content"
