--- a/app/src/main/res/layout/activity_membership.xml
+++ b/app/src/main/res/layout/activity_membership.xml
@@ -116,7 +116,7 @@
                                     android:layout_marginStart="30dp"
                                     android:layout_marginTop="20dp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/Bookings_details"
+                                    android:text="@string/Package_name"
                                     android:textColor="@color/black"
                                     android:textSize="20sp"
                                     tools:ignore="HardcodedText,SpUsage" />
@@ -129,7 +129,7 @@
                                     android:layout_marginStart="30dp"
                                     android:layout_marginTop="20dp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/Booking_ID"
+                                    android:text="@string/Package_name"
                                     android:textColor="@color/text"
                                     android:textSize="16sp"
                                     tools:ignore="HardcodedText,SpUsage" />
@@ -161,7 +161,7 @@
                                     android:layout_marginStart="30dp"
                                     android:layout_marginTop="20dp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/Trainer_Name"
+                                    android:text="@string/Package_duration"
                                     android:textColor="@color/text"
                                     android:textSize="16sp"
                                     tools:ignore="HardcodedText,SpUsage" />
@@ -193,7 +193,71 @@
                                     android:layout_marginStart="30dp"
                                     android:layout_marginTop="20dp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/Booking_time"
+                                    android:text="@string/Package_Status"
+                                    android:textColor="@color/text"
+                                    android:textSize="16sp"
+                                    tools:ignore="HardcodedText,SpUsage" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="15dp"
+                                    android:fontFamily="@font/nunito_regular"
+                                    android:padding="10dp"
+                                    android:paddingStart="15dp"
+                                    android:text="2 hours"
+                                    android:textColor="@color/black"
+                                    android:textSize="18sp"
+                                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck" />
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/ic_line"
+                                    tools:ignore="ContentDescription" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginTop="20dp"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text="@string/price"
+                                    android:textColor="@color/text"
+                                    android:textSize="16sp"
+                                    tools:ignore="HardcodedText,SpUsage" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="15dp"
+                                    android:fontFamily="@font/nunito_regular"
+                                    android:padding="10dp"
+                                    android:paddingStart="15dp"
+                                    android:text="2 hours"
+                                    android:textColor="@color/black"
+                                    android:textSize="18sp"
+                                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck" />
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/ic_line"
+                                    tools:ignore="ContentDescription" />
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginTop="20dp"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text="@string/Purchase_date"
                                     android:textColor="@color/text"
                                     android:textSize="16sp"
                                     tools:ignore="HardcodedText,SpUsage" />
@@ -226,7 +290,7 @@
                                     android:layout_marginStart="30dp"
                                     android:layout_marginTop="20dp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:text="@string/Status"
+                                    android:text="@string/Expiration_date"
                                     android:textColor="@color/text"
                                     android:textSize="16sp"
                                     tools:ignore="HardcodedText,SpUsage" />
