--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -61,7 +61,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
@@ -101,7 +101,7 @@
                 android:id="@+id/rl_gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="200dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:gravity="center"
@@ -150,11 +150,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="500dp"
+                android:layout_marginTop="220dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
+                android:layout_below="@id/rl_gender"
                 tools:ignore="NotSibling,UselessParent">
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -175,7 +175,6 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size"
                     android:textStyle="bold"
-                    android:drawableRight="@drawable/ic_chevron_right"
                     tools:ignore="HardcodedText,RtlHardcoded" />
 
             </RelativeLayout>
