--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -47,12 +47,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/text_account">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
                 android:background="@color/card_view">
 
                 <RelativeLayout
@@ -155,7 +159,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_profile">
 
                         <RelativeLayout
@@ -193,7 +197,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -219,7 +222,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_bookings">
 
                         <RelativeLayout
@@ -255,7 +258,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -281,7 +283,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_membership">
 
                         <RelativeLayout
@@ -317,7 +319,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -345,7 +346,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_dark_mode">
 
                         <RelativeLayout
@@ -382,7 +383,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -407,7 +407,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_privacy_policy">
 
                         <RelativeLayout
@@ -444,7 +444,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -469,7 +468,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_rate_us">
 
                         <RelativeLayout
@@ -506,7 +505,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
@@ -531,7 +529,7 @@
                         android:orientation="horizontal"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:layout_below="@+id/rl_feedback">
 
                         <RelativeLayout
@@ -568,7 +566,6 @@
                         <RelativeLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:layout_marginStart="1000dp"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentEnd="true">
