--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,23 +19,58 @@
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
 
-       <RelativeLayout
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               tools:ignore="ScrollViewSize">
+
+           <androidx.constraintlayout.widget.ConstraintLayout
+               android:id="@+id/linearLayout"
+               android:background="@color/dark_blue"
+               android:layout_width="match_parent"
+               android:layout_height="60dp"
+               android:layout_alignParentEnd="true"
+               android:layout_alignParentStart="true"
+               android:layout_alignParentTop="true"
+               android:orientation="horizontal"
+               tools:ignore="MissingConstraints">
+
+               <TextView
+                   android:id="@+id/text_title"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginHorizontal="10dp"
+                   android:paddingStart="30dp"
+                   android:layout_alignParentEnd="true"
+                   android:layout_alignParentStart="true"
+                   android:fontFamily="@font/opensans_bold"
+                   android:text="Good Morning"
+                   android:textColor="@color/white"
+                   android:textSize="24sp"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintTop_toTopOf="parent"
+                   tools:ignore="HardcodedText,RtlSymmetry" />
+
+           </androidx.constraintlayout.widget.ConstraintLayout>
+
+           <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
+           android:layout_below="@+id/linearLayout"
+           android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
-           android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
 
-           <RelativeLayout
+
+
+               <RelativeLayout
                android:id="@+id/fizone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_marginTop="20dp"
                android:layout_alignParentStart="true"
-               android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                tools:ignore="MissingConstraints,UselessParent">
 
@@ -44,9 +79,9 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/card_view"
+                   android:padding="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
-                   android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
@@ -68,6 +103,7 @@
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
+                           android:layout_marginVertical="10dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
@@ -81,7 +117,7 @@
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="true"
                                android:orientation="vertical"
-                               tools:ignore="UselessParent">
+                               tools:ignore="TooDeepLayout,UselessParent">
 
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
@@ -96,6 +132,7 @@
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
+                                   android:layout_marginTop="10dp"
                                    android:text="@string/Unlock_potential"
                                    android:fontFamily="@font/nunito_bold"
                                    android:layout_alignParentTop="true"
@@ -108,7 +145,7 @@
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
-                               android:layout_marginTop="5dp"
+                               android:layout_marginTop="10dp"
                                android:orientation="horizontal"
                                android:layout_below="@id/workout_name"
                                android:layout_alignParentStart="true"
@@ -368,6 +405,8 @@
            </RelativeLayout>
 
        </RelativeLayout>
+
+           </RelativeLayout>
 
        </ScrollView>
 
