--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -88,6 +88,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/show_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20sp"
@@ -101,6 +102,7 @@
 
 
                     <ImageView
+                        android:id="@+id/show_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/healthy_food_img"
@@ -131,6 +133,7 @@
                         tools:ignore="HardcodedText" />
 
                     <TextView
+                        android:id="@+id/show_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
