--- a/app/src/main/res/layout/diet_list_item.xml
+++ b/app/src/main/res/layout/diet_list_item.xml
@@ -31,6 +31,7 @@
             android:background="@color/card_view">
 
             <ImageView
+                android:id="@+id/diet_image"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
@@ -42,6 +43,7 @@
                 tools:ignore="ContentDescription" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/diet_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="160dp"
