--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     android:background="@color/dark_blue"
     tools:context=".ActivityLevel">
-
+<TextView
+    android:id="@+id/profile_in"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    tools:ignore="InvalidId,MissingConstraints" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
