--- a/app/src/main/res/layout/activity_profile_user_name.xml
+++ b/app/src/main/res/layout/activity_profile_user_name.xml
@@ -272,7 +272,8 @@
                         android:background="@drawable/text_bg"
                         android:fontFamily="@font/opensans_bold"
                         android:hint="@string/phone_no"
-                        android:inputType="text"
+                        android:inputType="phone"
+                        android:maxLength="10"
                         android:padding="10dp"
                         android:paddingStart="15dp"
                         android:textColor="@color/black"
