--- a/app/src/main/res/layout/activity_workout_plan.xml
+++ b/app/src/main/res/layout/activity_workout_plan.xml
@@ -163,6 +163,7 @@
                     tools:ignore="UselessLeaf,UselessParent">
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/exercise_recyc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:scrollbars="vertical"
