--- a/app/src/main/res/layout/exercise_name_list_item.xml
+++ b/app/src/main/res/layout/exercise_name_list_item.xml
@@ -56,7 +56,7 @@
                     android:layout_alignParentStart="true">
 
                 <ImageView
-                    android:id="@+id/img_user"
+                    android:id="@+id/exe_image"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentTop="true"
@@ -81,6 +81,7 @@
                     tools:ignore="NotSibling">
 
                     <TextView
+                        android:id="@+id/exe_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -92,6 +93,7 @@
                         tools:ignore="HardcodedText,TextSizeCheck" />
 
                     <TextView
+                        android:id="@+id/exe_focus"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nunito_bold"
