--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -162,6 +162,7 @@
                         app:boxBackgroundColor="@color/edit_text_background"
                         app:boxStrokeColor="#4E4A4A"
                         app:boxStrokeWidth="3dp"
+                        app:endIconMode="clear_text"
                         app:hintTextColor="@color/hint_color"
                         app:shapeAppearanceOverlay="@style/Button4"
                         tools:ignore="HardcodedText">
@@ -184,7 +185,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="10dp"
                         android:hint="@string/password"
                         app:boxBackgroundColor="@color/edit_text_background"
                         app:boxStrokeColor="@color/hint_color"
