--- a/app/src/main/res/layout/activity_packages.xml
+++ b/app/src/main/res/layout/activity_packages.xml
@@ -4,238 +4,166 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/package_card_view_bg"
-    android:orientation="vertical"
-    tools:context=".Packages">
+    android:background="@drawable/package_card_view_bg">
 
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_arrow_small_left"
+        app:layout_constraintBottom_toBottomOf="@+id/text_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_title" />
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/Packages"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/back"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_registration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_title">
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/ic_arrow_small_left"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="ContentDescription" />
 
-            <TextView
-                android:id="@+id/text_title"
+            <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:gravity="center"
-                android:layout_toStartOf="@+id/back"
-                android:layout_toEndOf="@+id/back"
-                android:fontFamily="@font/opensans_bold"
-                android:text="@string/Packages"
+                android:layout_marginTop="10dp"
+                android:text="@string/package_name"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/back"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="25sp"
+                app:fontFamily="@font/nunito_bold"
+                tools:ignore="HardcodedText" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/price"
+                android:fontFamily="@font/nunito_bold"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/text"
+                android:textSize="18sp"
                 tools:ignore="HardcodedText" />
 
 
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/linearLayout">
-
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                tools:ignore="ObsoleteLayoutParam,ScrollViewSize">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:orientation="horizontal">
 
-                <RelativeLayout
-                    android:id="@+id/package_name"
-                    android:layout_width="match_parent"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    tools:ignore="UselessParent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        tools:ignore="UselessParent">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="@string/package_name"
-                            android:textColor="@color/white"
-                            android:textSize="25sp"
-                            app:fontFamily="@font/nunito_bold"
-                            tools:ignore="HardcodedText" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/price"
-                            android:fontFamily="@font/nunito_bold"
-                            android:layout_marginTop="20dp"
-                            android:textColor="@color/text"
-                            android:textSize="18sp"
-                            tools:ignore="HardcodedText" />
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginStart="10dp"
-                            android:orientation="horizontal">
-
-                            <androidx.appcompat.widget.AppCompatTextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:text="₹"
-                                android:fontFamily="@font/opensans_bold"
-                                app:fontFamily="@font/opensans_bold"
-                                android:textColor="@color/white"
-                                android:textSize="20sp"
-                                tools:ignore="HardcodedText,ObsoleteLayoutParam" />
-
-                            <androidx.appcompat.widget.AppCompatTextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                app:fontFamily="@font/opensans_bold"
-                                android:layout_marginTop="5dp"
-                                android:layout_marginStart="10dp"
-                                android:text="9999/-"
-                                android:textColor="@color/white"
-                                android:textSize="35sp"
-                                tools:ignore="HardcodedText,ObsoleteLayoutParam" />
-
-
-                        </LinearLayout>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:fontFamily="@font/nunito_bold"
-                            android:text="@string/duration"
-                            android:textSize="18sp"
-                            android:textColor="@color/text"
-                            tools:ignore="HardcodedText" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="6 months"
-                            android:layout_marginStart="10dp"
-                            android:textColor="@color/white"
-                            app:fontFamily="@font/nunito_bold"
-                            android:textSize="20sp"
-                            tools:ignore="HardcodedText" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="@string/description"
-                            android:textColor="@color/text"
-                            android:textSize="18sp"
-                            tools:ignore="HardcodedText" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text=" One Month package offers you premium access to our state-of-the-art fitness facilities and exclusive amenities for a month-long period. Whether you're a fitness enthusiast seeking to achieve your goals or a beginner looking to kickstart your fitness journey, this package provides you with everything you need to succeed."
-                            android:textColor="@color/white"
-                            android:layout_marginStart="10dp"
-                            android:fontFamily="@font/nunito_semi_bold"
-                            android:layout_marginTop="10dp"
-                            android:textSize="14sp"
-                            tools:ignore="HardcodedText" />
-
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="40dp"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@+id/package_name"
-                    tools:ignore="UselessLeaf">
+                    android:text="₹"
+                    android:fontFamily="@font/opensans_bold"
+                    app:fontFamily="@font/opensans_bold"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:ignore="HardcodedText,ObsoleteLayoutParam" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_registration"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginStart="25dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="25dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/btn_bg"
-                        android:elevation="@dimen/button_elevation"
-                        android:fontFamily="@font/nunito_medium"
-                        android:gravity="center"
-                        android:shadowColor="@color/black"
-                        android:text="@string/buy_now"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/button_text_size"
-                        android:textStyle="normal|bold"
-                        app:cardElevation="@dimen/button_card_elevation"
-                        tools:ignore="HardcodedText,TouchTargetSizeCheck" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    app:fontFamily="@font/opensans_bold"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:text="9999/-"
+                    android:textColor="@color/white"
+                    android:textSize="35sp"
+                    tools:ignore="HardcodedText,ObsoleteLayoutParam" />
 
 
+            </LinearLayout>
 
-                </RelativeLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="@string/duration"
+                android:textSize="18sp"
+                android:textColor="@color/text"
+                tools:ignore="HardcodedText" />
 
-            </RelativeLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="6 months"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/white"
+                app:fontFamily="@font/nunito_bold"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText" />
 
-        </ScrollView>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/description"
+                android:textColor="@color/text"
+                android:textSize="18sp"
+                tools:ignore="HardcodedText" />
 
-    </RelativeLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" One Month package offers you premium access to our state-of-the-art fitness facilities and exclusive amenities for a month-long period. Whether you're a fitness enthusiast seeking to achieve your goals or a beginner looking to kickstart your fitness journey, this package provides you with everything you need to succeed. "
+                android:textColor="@color/white"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/nunito_semi_bold"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
+                tools:ignore="HardcodedText" />
+
+
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_registration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginVertical="10dp"
+        android:background="@drawable/btn_bg"
+        android:elevation="@dimen/button_elevation"
+        android:fontFamily="@font/nunito_medium"
+        android:gravity="center"
+        android:shadowColor="@color/black"
+        android:text="@string/buy_now"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/button_text_size"
+        android:textStyle="normal|bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
