--- a/app/src/main/res/layout/activity_write_review.xml
+++ b/app/src/main/res/layout/activity_write_review.xml
@@ -49,7 +49,7 @@
                 android:layout_toStartOf="@+id/back"
                 android:layout_toEndOf="@+id/back"
                 android:fontFamily="@font/opensans_bold"
-                android:text="About yourself"
+                android:text="Write a reviews"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
